tree_sitter_v/test/corpus/array_fixed.txt
===
Fixed Array
===

fn main() {
  fixed := [1]!
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (short_var_declaration
        (expression_list (identifier))
        (expression_list
          (fixed_array (int_literal)))))))
