tree_sitter_v/test/corpus/binary_expression_receive.txt
===
Binary Expression (Receive)
===

test = <- foo

---

(source_file 
  (assignment_statement 
    (assignable_identifier_list (identifier)) 
    (expression_list 
      (unary_expression (identifier)))))
