tree_sitter_v/test/corpus/cast_expression.txt
===
Cast Expression
===

fn main() {
  t := &char(charp)
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (short_var_declaration
        (expression_list (identifier))
        (expression_list
          (type_cast_expression
            (pointer_type (builtin_type))
            (identifier)))))))
