tree_sitter_v/test/corpus/comptime_identifier.txt
===
Comptime Identifier (for Comptime Call)
===

t.$method(1)

---

(source_file
  (call_expression
    (selector_expression
      (identifier)
      (comptime_identifier (identifier)))
    (argument_list (int_literal))))
