tree_sitter_v/test/corpus/comptime_selector_expression.txt
===
Comptime Selector Expression
===

println(t.$(field.name))

---

(source_file
  (call_expression
    (identifier)
    (argument_list
      (selector_expression
        (identifier)
        (comptime_selector_expression
          (selector_expression
            (identifier) (identifier)))))))
