tree_sitter_v/test/corpus/const_declaration.txt
===
Const declaration
===

const (
  name = 'Foo'
  num = 100
)

---

(source_file
  (const_declaration
    (const_spec (identifier) (interpreted_string_literal))
    (const_spec (identifier) (int_literal))))
