tree_sitter_v/test/corpus/defer_statement.txt
===
Defer Statement
===

fn main() {
  defer {
    function_call()
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (defer_statement
        (block
          (call_expression
            (identifier)
            (argument_list)))))))
