tree_sitter_v/test/corpus/for_statement.txt
===
For Statement
===

fn main() {
  for true {
    // do something
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (for_statement 
        (true)
        (block (comment))))))
