tree_sitter_v/test/corpus/go_statement.txt
===
Go Statement
===

fn main() {
  go do_something()
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (go_statement
        (call_expression (identifier) (argument_list))))))
