tree_sitter_v/test/corpus/if_expression_is.txt
===
If Expression is guard
===

fn main() {
  if var is string {
    // do something
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (if_expression
        (is_expression (identifier) (builtin_type))
        (block (comment))))))
